--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tuleva-ag/tuleva-controls-test",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "TulevaControlsTest",
   "scripts": {
     "rollup": "rollup -c"
@@ -33,8 +33,5 @@
     "dist"
   ],
   "types": "dist/index.d.ts",
-  "type": "module",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
-  }
+  "type": "module"
 }
