--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tuleva-ag/tuleva-controls-test",
-  "version": "0.0.13",
+  "version": "0.0.15",
   "description": "TulevaControlsTest",
   "scripts": {
     "rollup": "rollup -c"
@@ -17,7 +17,8 @@
     "rollup": "^3.3.0",
     "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-sass": "^1.12.16",
-    "typescript": "^4.8.4"
+    "rollup-plugin-peer-deps-external": "2.2.4",
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "csstype": "^3.1.1",
