Hours Column and hours editor added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,7 @@
     "emitDeclarationOnly": true,
     "resolveJsonModule": true,
     
-  }
+  },
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
