--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tuleva-ag/tuleva-controls-test",
-  "version": "0.0.16",
+  "version": "0.0.19",
   "description": "TulevaControlsTest",
   "scripts": {
     "rollup": "rollup -c"
@@ -16,15 +16,19 @@
     "babel-loader": "^8.3.0",
     "rollup": "^3.3.0",
     "rollup-plugin-dts": "^5.0.0",
-    "rollup-plugin-sass": "^1.12.16",
     "rollup-plugin-peer-deps-external": "2.2.4",
+    "rollup-plugin-sass": "^1.12.16",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "antd": "^4.24.3",
     "csstype": "^3.1.1",
     "js-tokens": "^4.0.0",
     "loose-envify": "^1.4.0",
     "moment": "^2.29.4",
+    "react-tracked": "^1.7.10",
+    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.4.1"
   },
   "main": "dist/cjs/index.js",
