--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tuleva-ag/tuleva-controls-test",
-  "version": "0.0.19",
+  "version": "0.0.27",
   "description": "TulevaControlsTest",
   "scripts": {
     "rollup": "rollup -c"
@@ -18,9 +18,13 @@
     "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-sass": "^1.12.16",
+    "rollup-plugin-import-css": "3.1.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^4.9.3"
   },
-  "dependencies": {
+  "dependencies": {},
+  "peerDependencies": {
+    "react": "18.2.0",
     "@ant-design/icons": "^4.8.0",
     "antd": "^4.24.3",
     "csstype": "^3.1.1",
@@ -28,7 +32,6 @@
     "loose-envify": "^1.4.0",
     "moment": "^2.29.4",
     "react-tracked": "^1.7.10",
-    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.4.1"
   },
   "main": "dist/cjs/index.js",
