--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tuleva-ag/tuleva-controls-test",
-  "version": "0.0.27",
+  "version": "0.0.30",
   "description": "TulevaControlsTest",
   "scripts": {
     "rollup": "rollup -c"
@@ -18,9 +18,12 @@
     "rollup-plugin-dts": "^5.0.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-sass": "^1.12.16",
+    "rollup-plugin-scss": "4.0.0",
     "rollup-plugin-import-css": "3.1.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "node-sass": "8.0.0",
+    "autoprefixer": "10.4.13"
   },
   "dependencies": {},
   "peerDependencies": {
